New insertUsersToProject Apex header

--- a/force-app/main/default/lwc/assignResourcesByRole/assignResourcesByRole.html
+++ b/force-app/main/default/lwc/assignResourcesByRole/assignResourcesByRole.html
@@ -3,10 +3,10 @@
 
     <lightning-card title="Resources Assignment by Role" icon-name="standard:user_role">
         <template if:true={projectRolesRequired.data}>
-            <!--p>2212</p-->
+            <p>1729</p>
             <template for:each={projectRolesRequired.data} for:item="Project">
             <!--h1>{projectRolesRequired.data.Name}</h1-->
-            <h1 key={Project.Id}>From <lightning-formatted-date-time value={Project.Start_Date__c} year="numeric" month="2-digit" day="2-digit" time-zone="UTC"></lightning-formatted-date-time>&nbsp;<!--{Project.Start_Date__c} {templProjectStartDate} -->
+            <h1 key={Project.Id}>From <lightning-formatted-date-time value={Project.Start_Date__c} year="numeric" month="2-digit" day="2-digit" time-zone="UTC"></lightning-formatted-date-time>&nbsp;
                 to <lightning-formatted-date-time value={Project.End_Date__c} day="2-digit" month="2-digit" year="numeric" time-zone="UTC"></lightning-formatted-date-time>
                 . {Project.Hours_Sold__c}hs. sold.</h1>
             <!--h1>Status: {projectRolesRequired.data.Status__c}</h1-->
